--- a/app/src/main/res/layout-v21/activity_config.xml
+++ b/app/src/main/res/layout-v21/activity_config.xml
@@ -50,6 +50,7 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLength="1024"
         android:padding="4dp"
         android:lines="2"
         android:layout_alignParentTop="true"
@@ -61,7 +62,6 @@
         android:inputType="text|textCapSentences|textAutoCorrect"
         android:imeOptions="actionDone"
         />
-
 
     <LinearLayout
         android:id="@+id/linearLayoutVpArStatus"
