--- a/app/src/main/res/layout-v21/activity_imagecap.xml
+++ b/app/src/main/res/layout-v21/activity_imagecap.xml
@@ -7,7 +7,6 @@
     android:background="@android:color/transparent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context=".ImageCapActivity"
     android:padding="0dp">
 
     <org.opencv.android.JavaCameraView
@@ -301,6 +300,19 @@
         android:scaleType="fitCenter"
         android:padding="10dp"
         android:visibility="gone"/>
+
+    <ImageButton
+        android:id="@+id/buttonStartVideoInVpCaptures"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/circular_button"
+        android:clickable="true"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_play_arrow_white_48dp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView1"
