--- a/app/src/main/res/layout/activity_imagecap.xml
+++ b/app/src/main/res/layout/activity_imagecap.xml
@@ -7,8 +7,7 @@
     android:background="@android:color/transparent"
     android:padding="0dp"
     android:clipChildren="false"
-    android:clipToPadding="false"
-    tools:context=".ImageCapActivity">
+    android:clipToPadding="false">
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/imagecap_javaCameraView"
@@ -321,6 +320,19 @@
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_skip_next_white_18dp"
+        android:visibility="gone" />
+
+    <ImageButton
+        android:id="@+id/buttonStartVideoInVpCaptures"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/circular_button"
+        android:clickable="true"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_play_arrow_white_48dp"
         android:visibility="gone" />
 
     <TextView
